--- a/index.html
+++ b/index.html
@@ -402,6 +402,6 @@
     </script>
 
     <!-- فایل fix.js برای رفع مشکل درس ۴ -->
-    <script src="fix.js"></script>
+    <script src="autoloader.js"></script>
 </body>
 </html>
