--- a/central_tester.html
+++ b/central_tester.html
@@ -1,21 +1,7 @@
 // ==================== تنظیمات ====================
+
 const MODULES = {
-    core: [
-        'event_bus.js', 'utils.js', 'state.js',
-        'state_manager.js', 'router.js', 'database.js',
-        'api.js', 'api_client.js', 'config.js',
-        'context_provider.js', 'font_manager.js'
-    ],
-    auth: [
-        'auth_utils.js', 'auth_validator.js',
-        'token_manager.js', 'session_service.js',
-        'permission_checker.js', 'auth_analytics.js',
-        'auth_middleware.js', 'auth_manager.js'
-    ],
-    lessons: ['lesson_engine.js', 'lesson_content.js', 'lesson_progress.js'],
-    pages: ['auth/page.js', 'auth/view.js', 'auth/controller.js', 'home/page.js', 'home/view.js'],
-    components: ['Button.js', 'Card.js', 'Input.js', 'Modal.js', 'ProgressBar.js'],
-    layouts: ['header.js', 'footer.js', 'main_layout.js']
+    core: ['event_bus.js', 'utils.js', 'state.js', 'router.js']
 };
 
 // ==================== سیستم بارگذاری هوشمند ====================
